mcabber (0.7.5-dev)

 * New IQ system, for Jabber IQ request
 * Add "/request time|version" commands
 * We try to display as many roster items as possible in the buddylist
 * New "beep_on_message" option
 * New "eventcmd_checkstatus" option
 * Improved English messages (thanks to Philip M. White)
 * Fix a small issue with resources containing uppercase chars in /status_to

 -- Mikael, ?

mcabber (0.7.4)

 * Fix a segfault when reconnecting to the server or rejoining a room
 * Fix a segfault when a group and a contact have the same name

 -- Mikael, 2006-01-17

mcabber (0.7.3)

 * Fix a segfault when a resource contains non-representable chars
 * Fix an UTF-8 encoding issue when joining a room
 * Fix an eventcmd issue
 * Chat Mode is automatically enabled when some commands are entered
   ("/info", "/room names", "/room whois")
 * Messages can be sent to agents
 * The unread_message flags are not reset when the server connection is lost
 * MUC: server messages do not set the new_message flag anymore
 * New "load_muc_logs" option, logfiles are not loaded for MUC room by default
 * New "nickname" option, to set the default nickname in chatrooms
 * Add "/msay send_to" command
 * "/add" and "/status_to" can be used with special jid "." for the current
   selected buddy
 * Lots of misc. bugfixes
 * Documentation updates

 -- Mikael, 2006-01-12

mcabber (0.7.2)

 * Lots of internal changes (code cleanup)
 * Improved commands parsing
   Commands now handle correctly resources or nicknames containing whitespace
 * The roster is updated in real time when receiving an update from the server
 * "/info" shows subscriptions (none, from, to, both)
 * "/info" and "/room whois" show presence timestamp
 * Add "/authorization" command, to manage subscriptions
 * mcabber now answers IQ requests
 * The deprecated Agent list IQ request has been removed
 * Empty resources are displayed (do not use the arbitrary "default" string
   instead)