@@ -656,6 +656,9 @@ change jid's affiliation (affil can be "none", "member", "admin", "owner")
 /roster bottom|top|hide_offline|show_offline|toggle_offline
 </b></dt>
 <dt><b>
+/roster hide|show|toggle
+</b></dt>
+<dt><b>
 /roster alternate|unread_first|unread_next
 </b></dt>
 <dt><b>
@@ -718,6 +721,30 @@ show offline buddies
 </td>
 <td>
 toggle display of offline buddies
+</td>
+</tr>
+<tr valign="top">
+<td>
+<b>hide</b>
+</td>
+<td>
+hide roster (full-width chat window)
+</td>
+</tr>
+<tr valign="top">
+<td>
+<b>show</b>
+</td>
+<td>
+show roster
+</td>
+</tr>
+<tr valign="top">
+<td>
+<b>toggle</b>
+</td>
+<td>
+toggle roster visibility
 </td>
 </tr>
 <tr valign="top">
@@ -823,7 +850,7 @@ License (GPL).</p>
 <div id="footer">
 <p>
 Version 0.7.5-dev<br />
-Last updated 12-Feb-2006 11:26:21 CEST
+Last updated 25-Feb-2006 23:01:21 CEST
 </p>
 </div>
 </div>
